<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cstLayout_Home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_page.HomeRecyclerViewFragment">

    <EditText
        android:id="@id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/search_design"
        android:ems="10"
        android:hint="Search"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/rcyView_Home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:padding="10dp"
        android:paddingTop="6dp"
        android:background="@drawable/round_shape"
        app:layout_constraintBottom_toTopOf="@+id/rcyView_Home"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/editTextSearch"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcyView_Home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="6dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>